fix: translate buttons and remove useless comments.

--- a/src/app/shared/layout/exibir-bilhete/esportes/exibir-bilhete-esportivo.component.html
+++ b/src/app/shared/layout/exibir-bilhete/esportes/exibir-bilhete-esportivo.component.html
@@ -40,7 +40,7 @@
         </p>
         <p class="resultado">
             <b>Resultados: </b>
-            <span *ngIf="aposta.resultado">{{aposta.resultado || titlecase}}</span>
+            <span *ngIf="aposta.resultado">{{aposta.resultado | titlecase}}</span>
             <span *ngIf="!aposta.resultado">Aguardando</span>
         </p>
         <p class="ganho" *ngIf="aposta.resultado || aposta.resultado == 'a confirmar'">
