--- a/src/app/shared/layout/exibir-bilhete/cassino/exibir-bilhete-cassino/exibir-bilhete-cassino.component.html
+++ b/src/app/shared/layout/exibir-bilhete/cassino/exibir-bilhete-cassino/exibir-bilhete-cassino.component.html
@@ -1,7 +1,7 @@
 <div id="cupom" [ngStyle]="{'border-radius': playButton ? '10px' : ''}">
     <div class="cupom-body">
         <div id="game-image">
-            <img src="{{gameImageUrl}}" alt="Teste">
+            <img src="{{gameImageUrl}}" alt="Casino picture">
         </div>
         <div id="cupom-info">
             <p>{{aposta.game}}</p>
