--- a/src/app/clientes/configuracoes/configuracoes.component.html
+++ b/src/app/clientes/configuracoes/configuracoes.component.html
@@ -90,6 +90,31 @@
                         </form>
                     </div>
                 </section>
+                <section class="limite-tempo-atividade">
+                    <div class="section-header" (click)="toggleSections('limiteTempoAtividade')">
+                        <h3>{{ 'jogo_responsavel.limite_tempo_atividade.titulo' | translate }}</h3>
+                        <i class="fa {{sectionLimiteTempoAtividade ? 'fa-chevron-up' : 'fa-chevron-down'}}" ></i>
+                    </div>
+                    <div class="section-body" *ngIf="sectionLimiteTempoAtividade">
+                        <p class="descricao">{{ 'jogo_responsavel.limite_tempo_atividade.descricao' | translate }}</p>
+                        <form [formGroup]="formLimiteTempoAtividade" (ngSubmit)="handleSubmit('onSubmitLimiteTempoAtividade')">
+                            <div class="field">
+                                <label for="">{{ 'jogo_responsavel.limite_tempo_atividade.definir_limite_diario' | translate }}</label>
+                                    <select class="form-control inverted-out" formControlName="limiteTempoAtividade">
+                                        <option value="">{{ 'placeholders.opcao_desabilitado' | translate }}</option>
+                                        <option value="30minutos">{{ 'jogo_responsavel.limite_tempo_atividade.30minutos' | translate }}</option>
+                                        <option value="45minutos">{{ 'jogo_responsavel.limite_tempo_atividade.45minutos' | translate }}</option>
+                                        <option value="1hora">{{ 'jogo_responsavel.limite_tempo_atividade.1hora' | translate }}</option>
+                                        <option value="2horas">{{ 'jogo_responsavel.limite_tempo_atividade.2horas' | translate }}</option>
+                                        <option value="3horas">{{ 'jogo_responsavel.limite_tempo_atividade.3horas' | translate }}</option>
+                                        <option value="4horas">{{ 'jogo_responsavel.limite_tempo_atividade.4horas' | translate }}</option>
+                                    </select>
+                                <ng-container *ngTemplateOutlet="senhaAtualTemplate"></ng-container>
+                            </div>
+                            <button type="submit" class="btn btn-custom">{{ 'botoes.salvar_alteracoes' | translate }}</button>
+                        </form>
+                    </div>
+                </section>
                 <section class="limite-apostas" *ngIf="blocked">
                     <div class="section-header" (click)="toggleSections('temporizadorSessao')">
                         <h3>{{ 'jogo_responsavel.temporizador_sessao.titulo' | translate }}</h3>
