--- a/src/app/clientes/carteira/carteira.component.html
+++ b/src/app/clientes/carteira/carteira.component.html
@@ -20,11 +20,11 @@
                 </div>
                 <div class="balance-details">
                     <div class="balance-item">
-                        <span>Saldo liberado para saque</span>
+                        <span>Saldo disponível para saque</span>
                         <span>{{ withdrawAvailable | currency }}</span>
                     </div>
                     <div class="balance-item">
-                        <span>Saldo Bloqueado</span>
+                        <span>Saldo restrito para apostar</span>
                         <span>{{ withdrawBlocked | currency }}</span>
                     </div>
                     <div class="balance-item">
