feat: odds visual translation, football match list

--- a/src/app/esportes/futebol/default/jogo/futebol-jogo.component.html
+++ b/src/app/esportes/futebol/default/jogo/futebol-jogo.component.html
@@ -197,7 +197,7 @@
                                                                  [ngClass]="{'selecionado': itemSelecionado(jogo, odd)}"
                                                                  (click)="addCotacao(jogo, odd)">
                                                                                 <span class="nome-odd">
-                                                                                    {{odd.label}}
+                                                                                    {{odd['label_' + currentLanguage]}}
                                                                                 </span>
                                                                 <span class="valor">
                                                                                     {{odd.valorFinal}}
@@ -207,7 +207,7 @@
                                                         <ng-template #cotacaoBloqueada>
                                                             <div class="inner-odd odd-disabled">
                                                                                 <span class="nome">
-                                                                                    {{odd.label}}
+                                                                                    {{odd['label_' + currentLanguage]}}
                                                                                 </span>
                                                                 <span class="valor">
                                                                                     <i class="fa fa-lock"></i>
@@ -241,7 +241,7 @@
                                                                  [ngClass]="{'selecionado': itemSelecionado(jogo, odd)}"
                                                                  (click)="addCotacao(jogo, odd)">
                                                                                 <span class="nome-odd">
-                                                                                    {{odd.label}}
+                                                                                    {{odd['label_' + currentLanguage]}}
                                                                                 </span>
                                                                 <span class="valor">
                                                                                     {{odd.valorFinal}}
@@ -251,7 +251,7 @@
                                                         <ng-template #cotacaoBloqueada>
                                                             <div class="inner-odd odd-disabled">
                                                                                 <span class="nome">
-                                                                                    {{odd.label}}
+                                                                                    {{odd['label_' + currentLanguage]}}
                                                                                 </span>
                                                                 <span class="valor">
                                                                                     <i class="fa fa-lock"></i>
@@ -294,7 +294,7 @@
                                                                  [ngClass]="{'selecionado': itemSelecionado(jogo, odd)}"
                                                                  (click)="addCotacao(jogo, odd)">
                                                                                     <span class="nome-odd">
-                                                                                        {{odd.label}}
+                                                                                        {{odd['label_' + currentLanguage]}}
                                                                                     </span>
                                                                 <span class="valor">
                                                                                         {{odd.valorFinal}}
@@ -304,7 +304,7 @@
                                                         <ng-template #cotacaoBloqueada>
                                                             <div class="inner-odd odd-disabled">
                                                                                     <span class="nome-odd">
-                                                                                        {{odd.label}}
+                                                                                        {{odd['label_' + currentLanguage]}}
                                                                                     </span>
                                                                 <span class="valor">
                                                                                         <i class="fa fa-lock"></i>
@@ -337,7 +337,7 @@
                                                                  [ngClass]="{'selecionado': itemSelecionado(jogo, odd)}"
                                                                  (click)="addCotacao(jogo, odd)">
                                                                                     <span class="nome-odd">
-                                                                                        {{odd.label}}
+                                                                                        {{odd['label_' + currentLanguage]}}
                                                                                     </span>
                                                                 <span class="valor">
                                                                                         {{odd.valorFinal}}
@@ -347,7 +347,7 @@
                                                         <ng-template #cotacaoBloqueada>
                                                             <div class="inner-odd odd-disabled">
                                                                                     <span class="nome-odd">
-                                                                                        {{odd.label}}
+                                                                                        {{odd['label_' + currentLanguage]}}
                                                                                     </span>
                                                                 <span class="valor">
                                                                                         <i class="fa fa-lock"></i>
@@ -390,7 +390,7 @@
                                                                  [ngClass]="{'selecionado': itemSelecionado(jogo, odd)}"
                                                                  (click)="addCotacao(jogo, odd)">
                                                                                     <span class="nome-odd">
-                                                                                        {{odd.label}}
+                                                                                        {{odd['label_' + currentLanguage]}}
                                                                                     </span>
                                                                 <span class="valor">
                                                                                         {{odd.valorFinal}}
@@ -400,7 +400,7 @@
                                                         <ng-template #cotacaoBloqueada>
                                                             <div class="inner-odd odd-disabled">
                                                                                     <span class="nome-odd">
-                                                                                        {{odd.label}}
+                                                                                        {{odd['label_' + currentLanguage]}}
                                                                                     </span>
                                                                 <span class="valor">
                                                                                         <i class="fa fa-lock"></i>
@@ -433,7 +433,7 @@
                                                                  [ngClass]="{'selecionado': itemSelecionado(jogo, odd)}"
                                                                  (click)="addCotacao(jogo, odd)">
                                                                                     <span class="nome-odd">
-                                                                                        {{odd.label}}
+                                                                                        {{odd['label_' + currentLanguage]}}
                                                                                     </span>
                                                                 <span class="valor">
                                                                                         {{odd.valorFinal}}
@@ -443,7 +443,7 @@
                                                         <ng-template #cotacaoBloqueada>
                                                             <div class="inner-odd odd-disabled">
                                                                                     <span class="nome-odd">
-                                                                                        {{odd.label}}
+                                                                                        {{odd['label_' + currentLanguage]}}
                                                                                     </span>
                                                                 <span class="valor">
                                                                                         <i class="fa fa-lock"></i>
