--- a/src/app/esportes/futebol/default/jogo/futebol-jogo.component.html
+++ b/src/app/esportes/futebol/default/jogo/futebol-jogo.component.html
@@ -182,7 +182,7 @@
                                      *ngFor="let chave of objectKeys(mercados90); let i = index">
                                     <div *ngIf="verificarColunaMercado(i)">
                                         <div class="header-tipo-aposta" (click)="toggleOdd(mercados90[chave])" [ngClass]="{'collapsed' : oddAberto(mercados90[chave])}">
-                                            {{mercados90[chave].nome}}
+                                            {{mercados90[chave]['nome_' + currentLanguage]}}
                                             <i class="fa fa-angle-down"></i>
                                         </div>
                                         <div class="odds-tipo-aposta" *ngIf="oddAberto(mercados90[chave])">
