Revert "fix: block button on submit"
This reverts commit aed343657c7047c0373cf4b9518490fff2eabdcf.

--- a/src/app/meu-perfil/alterar-senha.component.html
+++ b/src/app/meu-perfil/alterar-senha.component.html
@@ -113,12 +113,11 @@
                         class="btn btn-custom2 w-150 mr-4"
                         type="button"
                         (click)="resetarForm()"
-                        [disabled]="loading"
                     >
                         {{'geral.cancelar' | translate}}
                     </button>
-                    <button class="btn btn-custom w-150" type="submit" [disabled]="loading">
-                        {{(loading ? 'geral.salvando' : 'geral.salvar') | translate}}
+                    <button class="btn btn-custom w-150" type="submit">
+                        {{'geral.salvar' | translate}}
                     </button>
                 </div>
             </form>
